--- a/Facebook clone/src/MainArea/MainArea.css
+++ b/Facebook clone/src/MainArea/MainArea.css
@@ -50,6 +50,14 @@
     border-radius: 20%;
     width: 20%;
 }
+
+.Pross{
+    display: flex;
+    align-items: center;
+    font-weight: 550;
+    font-size: 1.5rem;
+    padding: 0 15px;
+}
  
 .Lside{
     height: 50rem;
