--- a/Facebook clone/src/MainArea/MainArea.css
+++ b/Facebook clone/src/MainArea/MainArea.css
@@ -1,69 +1,196 @@
-.Main{
+.Main {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.Rside {
+  height: 50rem;
+  width: 21%;
+  left: 0;
+  flex-wrap: wrap;
+}
+
+.Profile {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 550;
+}
+
+.Profile > img {
+  border-radius: 50%;
+  width: 10%;
+}
+
+.Pro {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 1rem;
+  font-weight: 550;
+  padding-left: 1rem;
+}
+
+.Pro > div {
+  margin: 10px;
+}
+
+.Profiles {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 550;
+}
+
+.Profiles > img {
+  border-radius: 20%;
+  width: 20%;
+}
+
+.Pross {
+  display: flex;
+  align-items: center;
+  font-weight: 550;
+  font-size: 1.5rem;
+  padding: 0 15px;
+}
+
+.Lside {
+  height: 50rem;
+  width: 21%;
+  left: 0;
+  flex-wrap: wrap;
+}
+
+.Contact {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Contacts {
+  font-size: 1.6rem;
+  font-weight: 550;
+  padding-left: 1rem;
+  display: flex;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  padding: 2px 20px;
+}
+.chaticon{
     display: flex;
-    justify-content: space-between;
-
+}
+.Profilee {
+  display: flex;
+  align-items: center;
+  font-size: 1.7rem;
+  font-weight: 550;
 }
 
-.Rside{
-    height: 50rem;
-    width: 21%;
-    left: 0;
-    flex-wrap: wrap;
-    
+.Profilee img {
+  border-radius: 50%; 
+  width: 35px; 
+  height: 35px;
+  object-fit: cover;
+    margin-right: 10px;
 }
 
-.Profile{
+.MainArea{
+    display: grid;
+    width: 50%;
+    height: 30rem;
+    justify-content: center;
+}
+.addStory {
+  display: flex;
+  gap: 10px;
+  width: 130%;
+  margin: 18px 0;
+  color: white;
+  font-size: 1.5rem;
+  height: 12rem;
+  justify-content: flex-start;
+  padding-left: 5%;
+}
+
+.Story {
+  width: 130px;
+  height: 15rem;
+  margin: 18px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: .5rem;
+  background-color: black;
+}
+
+.Story img {
+  height: 60px;
+  width: 50%;
+  border-radius: 60%;
+}
+
+.StoryName {
+  font-size: 1rem;  
+  font-weight: bold;
+  text-align: center;
+  margin-top: 50px;
+  color: white;  
+}
+.message{
+    display: grid;
+    width: 80px;
+    height: 25rem;
+    margin-left: 5\%;
+}
+.Post{
+    margin-top: 10%;
     display: flex;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: 550;    
+    width: 100%;
+    height: 5rem;
+    justify-content: flex-start;
+    background-color: white;
+    /* margin-left: 10%;     */
+}
+.Post >div{
+    margin-left: 2px;
 }
 
-.Profile >img{
+.Post >img{
+    height: 50px;
     border-radius: 50%;
-    width: 10%;
+    width: 45px;
+    margin: 12px;
 }
-
-.Pro{
+input[type=Mind]{
+    width: 80%;
+    margin: 15px 0;
+    height: 2rem;
+    display: inline;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    margin-left: 5%;
+    box-sizing: border-box;
+}
+.Call{
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    margin-left: 0;
+    background-color: white;
+}
+.ico{
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+}
+.icons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 50px;
     font-size: 1rem;
-     font-weight: 550;
-     padding-left: 1rem;     
-}
-
-.Pro >div{
-    margin: 10px;
-}
-
-
-.Profiles{
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: 550;
-}
-
-
-.Profiles >img{
-    border-radius: 20%;
-    width: 20%;
-}
-
-.Pross{
-    display: flex;
-    align-items: center;
-    font-weight: 550;
-    font-size: 1.5rem;
-    padding: 0 15px;
-}
- 
-.Lside{
-    height: 50rem;
-    width: 21%;
-    background-color: blue;
-    left: 0;
-    flex-wrap: wrap;
-    
 }
